<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:padding="@dimen/activity_padding">

        <androidx.cardview.widget.CardView
            android:id="@+id/theaterTUZ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_margin"
            android:onClick="CardClick"
            app:cardCornerRadius="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:background="@drawable/card_bg"
                android:padding="@dimen/card_padding">

                <ImageView
                    android:id="@+id/tuz_image"
                    android:layout_width="@dimen/card_image_side"
                    android:layout_height="@dimen/card_image_side"
                    android:layout_marginRight="@dimen/card_image_marginRight"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"

                    android:src="@drawable/t_tuz"
                    android:contentDescription="@string/theater_tuz_name"
                    android:scaleType="centerCrop"
                    android:cropToPadding="true"
                    android:background="@color/black"
                    android:padding="1dp" />

                <TextView
                    android:id="@+id/tuz_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/tuz_image"
                    android:layout_marginBottom="@dimen/card_text_marginBottom"

                    android:text="@string/theater_tuz_name"
                    android:textSize="@dimen/card_theater_name_size"
                    android:textColor="@color/font"
                    android:textAlignment="center"
                    android:background="@drawable/text_bg"
                    android:padding="@dimen/card_text_padding"
                    android:gravity="center_horizontal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/tuz_image"
                    android:layout_below="@+id/tuz_name"

                    android:text="@string/theater_tuz_address"
                    android:textSize="@dimen/card_theater_address_size"
                    android:textColor="@color/font"
                    android:background="@drawable/text_bg"
                    android:padding="@dimen/card_text_padding"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/theaterDrama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_margin"
            android:onClick="CardClick"
            app:cardCornerRadius="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:background="@drawable/card_bg"
                android:padding="@dimen/card_padding">

                <ImageView
                    android:id="@+id/drama_image"
                    android:layout_width="@dimen/card_image_side"
                    android:layout_height="@dimen/card_image_side"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"

                    android:src="@drawable/t_drama"
                    android:contentDescription="@string/theater_drama_name"
                    android:scaleType="centerCrop"
                    android:cropToPadding="true"
                    android:background="@color/black"
                    android:padding="1dp" />

                <TextView
                    android:id="@+id/drama_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toRightOf="@id/drama_image"
                    android:layout_marginLeft="140dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginBottom="@dimen/card_text_marginBottom"

                    android:text="@string/theater_drama_name"
                    android:textSize="@dimen/card_theater_name_size"
                    android:textColor="@color/font"
                    android:textAlignment="center"
                    android:background="@drawable/text_bg"
                    android:padding="@dimen/card_text_padding"
                    android:gravity="center_horizontal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toRightOf="@id/drama_image"
                    android:layout_marginLeft="140dp"
                    app:layout_constraintTop_toBottomOf="@id/drama_name"
                    android:layout_marginTop="@dimen/card_text_marginBottom"

                    android:text="@string/theater_drama_address"
                    android:textSize="@dimen/card_theater_address_size"
                    android:textColor="@color/font"
                    android:background="@drawable/text_bg"
                    android:padding="@dimen/card_text_padding"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/theaterDolls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_margin"
            android:onClick="CardClick"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal"
                android:background="@drawable/card_bg"
                android:padding="@dimen/card_padding">

                <ImageView
                    android:id="@+id/dolls_image"
                    android:layout_width="@dimen/card_image_side"
                    android:layout_height="@dimen/card_image_side"
                    android:layout_marginRight="@dimen/card_image_marginRight"
                    android:layout_gravity="center_vertical"

                    android:src="@drawable/t_dolls"
                    android:contentDescription="@string/theater_dolls_name"
                    android:scaleType="centerCrop"
                    android:cropToPadding="true"
                    android:background="@color/black"
                    android:padding="1dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/dolls_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/card_text_marginBottom"

                        android:text="@string/theater_dolls_name"
                        android:textSize="@dimen/card_theater_name_size"
                        android:textColor="@color/font"
                        android:textAlignment="center"
                        android:background="@drawable/text_bg"
                        android:padding="@dimen/card_text_padding"
                        android:gravity="center_horizontal" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:text="@string/theater_dolls_address"
                        android:textSize="@dimen/card_theater_address_size"
                        android:textColor="@color/font"
                        android:background="@drawable/text_bg"
                        android:padding="@dimen/card_text_padding"/>
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>